<resources>
    <string name="app_name">BankNoteProject</string>
    <string name="splash_bg">splash_bg</string>
    <string name="splash_app_name">Banknote Identifier</string>
    <string name="next_button">NEXT</string>
    <string name="step1_ques_title">What kind of stones attract \nyou most?</string>
    <string name="todo">TODO</string>
    <string name="banknote">Banknote</string>
    <string name="banknote_des"><![CDATA[Paper bills & collectible notes]]></string>
    <string name="coin_title">Coin</string>
    <string name="coin_des"><![CDATA[Modern & old coins]]></string>
    <string name="both_title">Both</string>
    <string name="both_des">I collect everything.</string>
    <string name="step2_ques_title">What do you want to use the \napp for?</string>
    <string name="learn_title">Learn about currencies</string>
    <string name="check_title">Check collector value</string>
    <string name="identify_coin_title">Identify coins</string>
    <string name="identify_banknote_title">Identify banknotes</string>
    <string name="simple_title"><![CDATA[Simple & easy to read]]></string>
    <string name="focus_title"><![CDATA[Focus on history & origin]]></string>
    <string name="step3_ques_title">How do you prefer your \nresults displayed?</string>
    <string name="detail_title">Full detailed info</string>
    <string name="focus_on_title">Focus on collector value</string>
    <string name="nav_home">Home</string>
    <string name="nav_collection">Collection</string>
    <string name="home_title">Banknote Identifier</string>
    <string name="banner_title">Know what\'s in your pocket</string>
    <string name="banner_des">Tap here to recognize a collections</string>
    <string name="tv_recent">Recent Banknote</string>
    <string name="tv_random">Random banknote</string>
    <string name="detail_header">Banknote Info</string>
    <string name="ref_header">Reference Price</string>
    <string name="year_label">Year</string>
    <string name="value_label">Value</string>
    <string name="description_header">Description</string>
    <string name="features_header">Physical features</string>
    <string name="lettering_header">Lettering</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="collection_title">Collections</string>
    <string name="search_title">Search</string>
    <string name="recent_money">€ 15,000,00</string>
    <string name="recent_country">Australia square</string>
    <string name="home_search_hint">Search Banknote</string>
    <string name="no_data">No data</string>
</resources>
