<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvSearchTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/be_vietnam_pro_bold"
        android:paddingHorizontal="16dp"
        android:paddingVertical="14.5dp"
        android:text="@string/home_title"
        android:textColor="@color/navy_dark"
        android:textFontWeight="700"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="28" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvSearchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSearchTitle"
        app:strokeColor="#85FFFFFF"
        app:strokeWidth="1dp">

        <TextView
            android:id="@+id/tvSearch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/be_vietnam_pro_medium"
            android:gravity="center_vertical"
            android:hint="@string/home_search_hint"
            android:paddingHorizontal="16dp"
            android:textColorHint="#7337767B"
            android:textFontWeight="500"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_search_24"
            tools:targetApi="28" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/svBanner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvSearchBar"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvBanner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                app:cardBackgroundColor="@color/ivory"
                app:cardCornerRadius="24dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="16dp">

                    <ImageView
                        android:id="@+id/ivBanner"
                        android:layout_width="160dp"
                        android:layout_height="71dp"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitXY"
                        android:src="@drawable/dollar"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvBanner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/be_vietnam_pro_semibold"
                        android:text="@string/banner_title"
                        android:textColor="@color/teal_dark"
                        android:textFontWeight="600"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ivBanner"
                        tools:targetApi="28" />

                    <TextView
                        android:id="@+id/tvBannerDes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/be_vietnam_pro"
                        android:text="@string/banner_des"
                        android:textColor="@color/teal_dark"
                        android:textFontWeight="400"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvBanner"
                        tools:targetApi="28" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvRecent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/be_vietnam_pro_semibold"
                android:text="@string/tv_recent"
                android:textColor="@color/navy_dark"
                android:textFontWeight="600"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvBanner"
                tools:targetApi="28" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRecent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRecent" />

            <TextView
                android:id="@+id/tvRandom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/be_vietnam_pro_semibold"
                android:text="@string/tv_random"
                android:textColor="@color/navy_dark"
                android:textFontWeight="600"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvRecent"
                tools:targetApi="28" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRandomBanknote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRandom" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
